# Copyright (c) 2022, NVIDIA CORPORATION.

[build-system]

requires = [
    "wheel",
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "cugraph-service-server"
version = "23.06.00"
description = "cuGraph Service server"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license = { text = "Apache 2.0" }
requires-python = ">=3.8"
dependencies = [
    "cudf",
    "cugraph",
    "cugraph-service-client",
    "cupy-cuda11x",
    "dask-cuda",
    "dask-cudf",
    "distributed >=2023.1.1",
    "numpy",
    "rmm",
    "thriftpy2",
    "ucx-py",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["entry-points"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-benchmark",
    "scipy",
    "numpy",
    "pandas",
    "networkx>=2.5.1",
    "scikit-learn>=0.23.1",
    "python-louvain",
    # cudf will use fsspec but is protocol independent. cugraph tests
    # specifically require http for the test files it asks cudf to read.
    "fsspec[http]>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/rapidsai/cugraph"
Documentation = "https://docs.rapids.ai/api/cugraph/stable/"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = [
    "cugraph_service_server",
    "cugraph_service_server.*"
]
